--- a/创建型模式.md
+++ b/创建型模式.md
@@ -373,7 +373,7 @@ print(p)
 
 ## 单例模式
 
-![](https://canvs.oss-cn-chengdu.aliyuncs.com/canvs_typora/DesigPattern/singleton-comic.png)
+![](https://canvs.oss-cn-chengdu.aliyuncs.com/canvs_typora/DesigPattern/singleton-comic.png "客户端甚至可能没有意识到它们一直都在使用同一个对象")
 
 <center ><p style="color:#A8A8A8">客户端甚至可能没有意识到它们一直都在使用同一个对象</p> </center> 
 
